# rules_gemini

./: .gitattributes  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  MODULE.bazel  README.md
.bcr/: metadata.template.json
.github/workflows/: ci.yaml  release.yaml  release_prep.sh
docs/: BUILD.bazel  rules.md
e2e/smoke/: BUILD  MODULE.bazel  README.md  add.py  cores.py  cores.sh  prompt.txt
src/: BUILD.bazel  defs.bzl  extensions.bzl  repositories.bzl  requirements.in  requirements_lock.txt  toolchain.bzl
src/private/: BUILD.bazel  generate_content.py  prompt.bzl  resolved_toolchain.bzl  toolchains_repo.bzl
src/tests/: versions_test.bzl
