bazel_dep(name = "rules_gemini", version = "0.0.0", dev_dependency = True)
bazel_dep(name = "bazel_skylib", version = "1.8.1", dev_dependency = True)

local_path_override(
    module_name = "rules_gemini",
    path = "../..",
)

bazel_dep(name = "rules_python", version = "1.4.1")
bazel_dep(name = "aspect_rules_py", version = "1.5.0")

python = use_extension("@rules_python//python/extensions:python.bzl", "python")
python.toolchain(
    configure_coverage_tool = True,
    python_version = "3.11",
)

gemini = use_extension("@rules_gemini//src:extensions.bzl", "gemini")
gemini.toolchain(model = "gemini-2.0-flash")
use_repo(gemini, "gemini_toolchains")

register_toolchains("@gemini_toolchains//:all")
