load("@aspect_rules_py//py:defs.bzl", "py_binary", "resolutions")
load("@bazel_skylib//:bzl_library.bzl", "bzl_library")
load("@pypi//:requirements.bzl", "all_whl_requirements_by_package", "requirement")

bzl_library(
    name = "toolchains_repo",
    srcs = ["toolchains_repo.bzl"],
    visibility = ["//src:__subpackages__"],
)

bzl_library(
    name = "versions",
    srcs = ["versions.bzl"],
    visibility = ["//src:__subpackages__"],
)

bzl_library(
    name = "resolved_toolchain",
    srcs = ["resolved_toolchain.bzl"],
    visibility = ["//src:__subpackages__"],
)

bzl_library(
    name = "prompt",
    srcs = ["prompt.bzl"],
    visibility = ["//src:__subpackages__"],
)

py_binary(
    name = "generate_content",
    srcs = ["generate_content.py"],
    resolutions = resolutions.from_requirements(all_whl_requirements_by_package, requirement),
)
