load("@bazel_skylib//:bzl_library.bzl", "bzl_library")
load("@rules_python//python:py_binary.bzl", "py_binary")

exports_files(["generate_content.py"])

bzl_library(
    name = "toolchains_repo",
    srcs = ["toolchains_repo.bzl"],
    visibility = ["//src:__subpackages__"],
)

bzl_library(
    name = "resolved_toolchain",
    srcs = ["resolved_toolchain.bzl"],
    visibility = ["//src:__subpackages__"],
)

bzl_library(
    name = "prompt",
    srcs = ["prompt.bzl"],
    visibility = ["//src:__subpackages__"],
)

py_binary(
    name = "generate_content",
    srcs = ["generate_content.py"],
    deps = [
        "@pypi//bazel_runfiles",
        "@pypi//google_genai",
    ],
)
